# datathon-fraude

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: model_config.yaml
data/golden_set/: golden_set.json  test
data/knowledge_base/: knowledge_base.json
data/processed/: features.csv.dvc
data/raw/: transactions.csv.dvc
docs/: BENCHMARK.md  CHANGELOG.md  DATATHON_GAPS_E_DECISOES_v3.md  LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: drift_report_20260422_194346.html  drift_report_20260422_203316.html  drift_results.json  llm_judge.py  llm_judge_results.json  ragas_detailed_results.csv  ragas_eval.py  ragas_results.json
notebooks/: 01_eda.ipynb  eda_report.html  run_eda.py
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/data/: synthetic_generator.py
src/features/: feature_engineering.py
src/models/: baseline_mlp.py  explainer.py  registry.py  train.py
src/monitoring/: drift.py
src/serving/: Dockerfile  app.py
tests/: test_api.py  test_features.py
