[project]
name = "datathon-fraude"
version = "0.1.0"
description = "ML Copilot para prevenção a fraude — Datathon Fase 05"
requires-python = ">=3.11"

dependencies = [
    # dados
    "sdv>=1.9.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pandera>=0.18.0",
    "dvc>=3.0.0",

    # ml
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "torch>=2.2.0",
    "shap>=0.45.1", # Atualizado para melhor estabilidade no M1

    # mlflow
    "mlflow>=2.10.0",

    # llm e agente - ATUALIZADOS PARA LANGCHAIN 0.3 + GEMINI
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0", # Essencial para o Gemini 2.0
    "langchain-groq>=0.2.0",
    "chromadb>=0.5.0", # Versão mais estável para o Docker que você está usando
    "sentence-transformers>=3.0.0",

    # api
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # observabilidade e avaliação
    "evidently>=0.4.0",
    "langfuse>=2.0.0",
    "ragas>=0.2.15", # Adicionado aqui já que você vai rodar na Etapa 3

    # utilitários
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
]